--- a/src/main/resources/templates/app/house.html
+++ b/src/main/resources/templates/app/house.html
@@ -89,24 +89,24 @@
         </mt-tab-container-item>
     </mt-tab-container>
 
-    <mt-tabbar v-model="tab" @click.native="handleTabClick">
-        <mt-tab-item id="tab1">
-            <img slot="icon">
-            外卖
-        </mt-tab-item>
-        <mt-tab-item id="订单">
-            <img slot="icon">
-            订单
-        </mt-tab-item>
-        <mt-tab-item id="发现">
-            <img slot="icon">
-            发现
-        </mt-tab-item>
-        <mt-tab-item id="我的">
-            <img slot="icon">
-            我的
-        </mt-tab-item>
-    </mt-tabbar>
+    <!--<mt-tabbar v-model="tab" @click.native="handleTabClick">-->
+        <!--<mt-tab-item id="tab1">-->
+            <!--<img slot="icon">-->
+            <!--外卖-->
+        <!--</mt-tab-item>-->
+        <!--<mt-tab-item id="订单">-->
+            <!--<img slot="icon">-->
+            <!--订单-->
+        <!--</mt-tab-item>-->
+        <!--<mt-tab-item id="发现">-->
+            <!--<img slot="icon">-->
+            <!--发现-->
+        <!--</mt-tab-item>-->
+        <!--<mt-tab-item id="我的">-->
+            <!--<img slot="icon">-->
+            <!--我的-->
+        <!--</mt-tab-item>-->
+    <!--</mt-tabbar>-->
 
 
 </div>
