--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,11 +3,30 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
+    <!--<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>-->
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Welcome to My Home</title>
+    <script type="text/javascript">
+        var phoneWidth = parseInt(window.screen.width);
+        var phoneScale = phoneWidth / 640;
+        var ua = navigator.userAgent;
+        if (/Android (\d+\.\d+)/.test(ua)) {
+            var version = parseFloat(RegExp.$1);
+            if (version > 2.3) {
+                document.write(`<meta name="viewport" content = "width=640, minimum-scale=` + phoneScale + `
+                    ,maximum-scale=` + phoneScale + `
+                    ,target-densitydpi=device-dpi">`);
+            } else {
+                document.write(`<meta name = "viewport" content = "width=640, target-densitydpi=device-dpi" > `);
+            }
+        } else {
+            document.write(` < meta
+                name = "viewport"
+                content = "width=640, user-scalable=no, target-densitydpi=device-dpi"> `);
+        }
+    </script>
 </head>
 <body>
 <div>
