--- a/src/main/resources/templates/app/pdf.html
+++ b/src/main/resources/templates/app/pdf.html
@@ -6,6 +6,25 @@
     <link rel="stylesheet" href="https://unpkg.com/mint-ui@2.2.13/lib/style.css">
     <!-- 引入组件库 -->
     <script src="https://cdn.bootcss.com/axios/0.18.0/axios.js"></script>
+    <script type="text/javascript">
+        var phoneWidth = parseInt(window.screen.width);
+        var phoneScale = phoneWidth / 640;
+        var ua = navigator.userAgent;
+        if (/Android (\d+\.\d+)/.test(ua)) {
+            var version = parseFloat(RegExp.$1);
+            if (version > 2.3) {
+                document.write(`<meta name="viewport" content = "width=640, minimum-scale=` + phoneScale + `
+                    ,maximum-scale=` + phoneScale + `
+                    ,target-densitydpi=device-dpi">`);
+            } else {
+                document.write(`<meta name = "viewport" content = "width=640, target-densitydpi=device-dpi" > `);
+            }
+        } else {
+            document.write(` < meta
+                name = "viewport"
+                content = "width=640, user-scalable=no, target-densitydpi=device-dpi"> `);
+        }
+    </script>
 </head>
 <body font="pingfang" class="grade-b">
 <div id="app">
